--- a/AppStreamlit.ipynb
+++ b/AppStreamlit.ipynb
@@ -37,25 +37,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SXgbNxrlTgVP",
-        "outputId": "83887daa-d36c-4eff-ef20-dacd7f788a65"
+        "outputId": "f8b2419a-0eac-40a3-ab05-4985af941a08"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1G\u001b[0K⠙\u001b[1G\u001b[0K⠹\u001b[1G\u001b[0K⠸\u001b[1G\u001b[0K⠼\u001b[1G\u001b[0K⠴\u001b[1G\u001b[0K⠦\u001b[1G\u001b[0K\n",
-            "changed 22 packages in 796ms\n",
-            "\u001b[1G\u001b[0K⠦\u001b[1G\u001b[0K\n",
-            "\u001b[1G\u001b[0K⠦\u001b[1G\u001b[0K3 packages are looking for funding\n",
-            "\u001b[1G\u001b[0K⠦\u001b[1G\u001b[0K  run `npm fund` for details\n",
-            "\u001b[1G\u001b[0K⠦\u001b[1G\u001b[0K"
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.0/9.0 MB\u001b[0m \u001b[31m100.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.9/6.9 MB\u001b[0m \u001b[31m24.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[1G\u001b[0K⠙\u001b[1G\u001b[0K⠹\u001b[1G\u001b[0K⠸\u001b[1G\u001b[0K⠼\u001b[1G\u001b[0K⠴\u001b[1G\u001b[0K⠦\u001b[1G\u001b[0K⠧\u001b[1G\u001b[0K⠇\u001b[1G\u001b[0K⠏\u001b[1G\u001b[0K⠋\u001b[1G\u001b[0K⠙\u001b[1G\u001b[0K⠹\u001b[1G\u001b[0K⠸\u001b[1G\u001b[0K⠼\u001b[1G\u001b[0K⠴\u001b[1G\u001b[0K⠦\u001b[1G\u001b[0K⠧\u001b[1G\u001b[0K⠇\u001b[1G\u001b[0K\n",
+            "added 22 packages in 2s\n",
+            "\u001b[1G\u001b[0K⠇\u001b[1G\u001b[0K\n",
+            "\u001b[1G\u001b[0K⠇\u001b[1G\u001b[0K3 packages are looking for funding\n",
+            "\u001b[1G\u001b[0K⠇\u001b[1G\u001b[0K  run `npm fund` for details\n",
+            "\u001b[1G\u001b[0K⠇\u001b[1G\u001b[0K\u001b[1mnpm\u001b[22m \u001b[96mnotice\u001b[39m\n",
+            "\u001b[1mnpm\u001b[22m \u001b[96mnotice\u001b[39m New \u001b[31mmajor\u001b[39m version of npm available! \u001b[31m10.8.2\u001b[39m -> \u001b[34m11.7.0\u001b[39m\n",
+            "\u001b[1mnpm\u001b[22m \u001b[96mnotice\u001b[39m Changelog: \u001b[34mhttps://github.com/npm/cli/releases/tag/v11.7.0\u001b[39m\n",
+            "\u001b[1mnpm\u001b[22m \u001b[96mnotice\u001b[39m To update run: \u001b[4mnpm install -g npm@11.7.0\u001b[24m\n",
+            "\u001b[1mnpm\u001b[22m \u001b[96mnotice\u001b[39m\n",
+            "\u001b[1G\u001b[0K⠇\u001b[1G\u001b[0K"
           ]
         }
       ],
@@ -103,15 +110,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0n1G2jb0Zn0Z",
-        "outputId": "11207371-1362-4b8d-8244-65d2f4eb0b20"
+        "outputId": "1ae42b7d-b9e5-49e0-99e2-712ea1445b14"
       },
-      "execution_count": 19,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting app.py\n"
+            "Writing app.py\n"
           ]
         }
       ]
@@ -136,15 +143,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t1CDYAqhZ2BL",
-        "outputId": "37b0d00c-1b44-4aec-df29-6b498ce54bbf"
+        "outputId": "539f32e7-d427-4473-a506-a1c953158d68"
       },
-      "execution_count": 20,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Ton mot de passe (IP) pour le tunnel est : 34.86.74.103\n"
+            "Ton mot de passe (IP) pour le tunnel est : 35.187.243.54\n"
           ]
         }
       ]
@@ -159,7 +166,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OZjKgLHncckw",
-        "outputId": "4b48a5fb-f449-4665-c986-4a654745cbae"
+        "outputId": "61e8b285-16b5-4c55-b4dc-78a6dd865e8c"
       },
       "execution_count": null,
       "outputs": [
@@ -167,16 +174,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1G\u001b[0K⠙\u001b[1G\u001b[0K⠹\u001b[1G\u001b[0K⠸\n",
+            "\u001b[1G\u001b[0K⠙\u001b[1G\u001b[0K⠹\u001b[1G\u001b[0K⠸\u001b[1G\u001b[0K⠼\u001b[1G\u001b[0K⠴\u001b[1G\u001b[0K⠦\u001b[1G\u001b[0K⠧\u001b[1G\u001b[0K⠇\u001b[1G\u001b[0K⠏\u001b[1G\u001b[0K⠋\u001b[1G\u001b[0K⠙\u001b[1G\u001b[0K⠹\n",
             "Collecting usage statistics. To deactivate, set browser.gatherUsageStats to false.\n",
             "\u001b[0m\n",
-            "\u001b[1G\u001b[0K⠼\u001b[1G\u001b[0K⠴\u001b[1G\u001b[0K⠦\u001b[1G\u001b[0K⠧\u001b[1G\u001b[0K⠇\u001b[1G\u001b[0K⠏\u001b[1G\u001b[0K⠋\u001b[1G\u001b[0K⠙\u001b[1G\u001b[0K⠹\u001b[1G\u001b[0K⠸\u001b[1G\u001b[0K⠼\u001b[1G\u001b[0K⠴\u001b[1G\u001b[0K⠦\u001b[1G\u001b[0K⠧\u001b[1G\u001b[0K⠇\u001b[1G\u001b[0K⠏\u001b[1G\u001b[0K⠋\u001b[1G\u001b[0K⠙\u001b[1G\u001b[0K⠹\u001b[1G\u001b[0Kyour url is: https://hip-yaks-melt.loca.lt\n",
+            "\u001b[1G\u001b[0K⠸\u001b[1G\u001b[0K⠼\u001b[1G\u001b[0K⠴\u001b[1G\u001b[0K⠦\u001b[1G\u001b[0K⠧\u001b[1G\u001b[0K⠇\u001b[1G\u001b[0K⠏\u001b[1G\u001b[0K⠋\u001b[1G\u001b[0K⠙\u001b[1G\u001b[0K⠹\u001b[1G\u001b[0K⠸\u001b[1G\u001b[0K⠼\u001b[1G\u001b[0K⠴\u001b[1G\u001b[0K⠦\u001b[1G\u001b[0K⠧\u001b[1G\u001b[0Kyour url is: https://lemon-boats-film.loca.lt\n",
             "\u001b[0m\n",
             "\u001b[34m\u001b[1m  You can now view your Streamlit app in your browser.\u001b[0m\n",
             "\u001b[0m\n",
             "\u001b[34m  Local URL: \u001b[0m\u001b[1mhttp://localhost:8501\u001b[0m\n",
             "\u001b[34m  Network URL: \u001b[0m\u001b[1mhttp://172.28.0.12:8501\u001b[0m\n",
-            "\u001b[34m  External URL: \u001b[0m\u001b[1mhttp://34.86.74.103:8501\u001b[0m\n",
+            "\u001b[34m  External URL: \u001b[0m\u001b[1mhttp://35.187.243.54:8501\u001b[0m\n",
             "\u001b[0m\n"
           ]
         }
